--- a/Prog3_Actividad2_CatalogoArticulos/Actividad2CatalogoApp/Actividad2CatalogoApp.csproj
+++ b/Prog3_Actividad2_CatalogoArticulos/Actividad2CatalogoApp/Actividad2CatalogoApp.csproj
@@ -52,10 +52,28 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCategorias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCategorias.Designer.cs">
+      <DependentUpon>FormCategorias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FromMarcas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FromMarcas.Designer.cs">
+      <DependentUpon>FromMarcas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCategorias.resx">
+      <DependentUpon>FormCategorias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FromMarcas.resx">
+      <DependentUpon>FromMarcas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
