--- a/Prog3_Actividad2_CatalogoArticulos/Actividad2CatalogoApp/Actividad2CatalogoApp.csproj
+++ b/Prog3_Actividad2_CatalogoArticulos/Actividad2CatalogoApp/Actividad2CatalogoApp.csproj
@@ -97,5 +97,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\dominio\dominio.csproj">
+      <Project>{1123f810-ef66-4379-8221-7d0bfe96c701}</Project>
+      <Name>dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Negocio\Negocio.csproj">
+      <Project>{974d539c-098c-4e52-89fb-7b433f91dc0c}</Project>
+      <Name>Negocio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
