--- a/Prog3_Actividad2_CatalogoArticulos/Actividad2CatalogoApp/Actividad2CatalogoApp.csproj
+++ b/Prog3_Actividad2_CatalogoArticulos/Actividad2CatalogoApp/Actividad2CatalogoApp.csproj
@@ -70,6 +70,12 @@
     <Compile Include="frmAgregarCategoria.Designer.cs">
       <DependentUpon>frmAgregarCategoria.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAgregarImagen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAgregarImagen.Designer.cs">
+      <DependentUpon>frmAgregarImagen.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmAgregarMarca.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAgregarCategoria.resx">
       <DependentUpon>frmAgregarCategoria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAgregarImagen.resx">
+      <DependentUpon>frmAgregarImagen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAgregarMarca.resx">
       <DependentUpon>frmAgregarMarca.cs</DependentUpon>
